[project]
name = "super-transcriber"
version = "0.1.0"
description = ""
authors = [
    {name = "boltholds",email = "bolthold7507@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "whisperx (>=3.8.6,<4.0.0)",
    "whisperx @ git+https://github.com/m-bain/whisperX.git",
    "torch (==2.8.0)",
    "torchaudio (==2.8.0)",
    "torchvision (==0.23.0)",
    "rich (>=15.0.0,<16.0.0)",
    "hf-xet (>=1.5.0,<2.0.0)",
    "typer (>=0.26.2,<0.27.0)",
    "langgraph (>=1.2.2,<2.0.0)",
    "langchain (>=1.3.2,<2.0.0)",
    "langchain-openai (>=1.2.2,<2.0.0)",
    "langchain-ollama (>=1.1.0,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.34.0,<1.0.0)",
    "python-multipart (>=0.0.20,<1.0.0)",
]

[tool.poetry]
packages = [{include = "super_transcriber", from = "src"}]

[tool.poetry.dependencies]
torch = {source = "pytorch-cu128"}
torchaudio = {source = "pytorch-cu128"}
torchvision = {source = "pytorch-cu128"}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<10.0"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"


[tool.poetry.scripts]
conv = "super_transcriber.cli:app"
